popups, menu, filter

--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -52,11 +52,6 @@ header.header
               a.header-list-submenu__link(href="#") Частозадаваемые вопросы
         li.header-list__item 
           a.header-list__link(href="#") О нас
-          ul.header-list__submenu.header-list-submenu
-            li.header-list-submenu__item 
-              a.header-list-submenu__link(href="#") О компании
-            li.header-list-submenu__item 
-              a.header-list-submenu__link(href="#") Лицензии и ГОСТ
         li.header-list__item 
           a.header-list__link(href="#") Контакты
     ul.header__socials.header-socials 
@@ -85,7 +80,74 @@ header.header
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M5.29926 12H5.79926V12L5.29926 12ZM6.3998 16.6002L6.84701 16.8238L6.98533 16.5472L6.79956 16.2999L6.3998 16.6002ZM7.79959 18L8.09991 17.6002L7.85262 17.4145L7.57598 17.5528L7.79959 18ZM5 19.3998L4.55279 19.1762C4.45654 19.3687 4.49427 19.6012 4.64645 19.7533C4.79863 19.9055 5.03111 19.9433 5.22361 19.847L5 19.3998ZM9.29688 9L9.01953 8.58397C8.88043 8.67671 8.79688 8.83282 8.79688 9H9.29688ZM15.2969 15V15.5C15.4641 15.5 15.6202 15.4164 15.7129 15.2774L15.2969 15ZM11.0511 9.52554L11.5443 9.44334V9.44334L11.0511 9.52554ZM11.1906 10.3622L10.6974 10.4444V10.4444L11.1906 10.3622ZM10.7589 11.3587L11.0362 11.7747H11.0362L10.7589 11.3587ZM15.439 14.7868L15.855 15.0642L15.439 14.7868ZM14.7713 13.2457L14.8535 12.7525L14.7713 13.2457ZM13.9347 13.1063L13.8525 13.5995V13.5995L13.9347 13.1063ZM12.9382 13.538L13.3542 13.8153L13.3543 13.8153L12.9382 13.538ZM4.79926 12C4.79926 13.585 5.01455 15.5887 6.00003 16.9005L6.79956 16.2999C6.02713 15.2717 5.79926 13.5671 5.79926 12H4.79926ZM12.2993 4.5C8.50959 4.5 6.521 5.33891 5.56377 6.86144C5.09702 7.60385 4.91375 8.45498 4.84021 9.31991C4.76744 10.1759 4.79924 11.1104 4.79926 12L5.79926 12C5.79924 11.0597 5.76863 10.2043 5.83662 9.40462C5.90384 8.61395 6.06449 7.94382 6.41035 7.3937C7.07837 6.33118 8.58981 5.5 12.2993 5.5V4.5ZM19.7993 12C19.7993 10.4896 19.7217 9.25873 19.5032 8.26741C19.2835 7.27018 18.9139 6.48116 18.306 5.89118C17.6988 5.30196 16.9027 4.9588 15.9205 4.75994C14.9436 4.56215 13.7457 4.5 12.2993 4.5V5.5C13.7309 5.5 14.8469 5.56285 15.7221 5.74006C16.5921 5.9162 17.1862 6.19804 17.6096 6.60882C18.0321 7.01884 18.3333 7.60482 18.5267 8.48259C18.7214 9.36627 18.7993 10.5104 18.7993 12H19.7993ZM12.2993 19.5C15.5521 19.5 17.5236 19.0118 18.6209 17.6951C19.1672 17.0395 19.4562 16.2249 19.6128 15.2853C19.7687 14.35 19.7993 13.2509 19.7993 12H18.7993C18.7993 13.2491 18.7674 14.275 18.6264 15.1209C18.4861 15.9626 18.2439 16.5855 17.8526 17.0549C17.0749 17.9882 15.5464 18.5 12.2993 18.5V19.5ZM7.49927 18.3998C8.16962 18.9034 8.98451 19.174 9.80893 19.3218C10.6347 19.4698 11.5022 19.5 12.2993 19.5V18.5C11.5202 18.5 10.723 18.4697 9.98539 18.3375C9.24648 18.205 8.59955 17.9756 8.09991 17.6002L7.49927 18.3998ZM5.22361 19.847L8.0232 18.4472L7.57598 17.5528L4.77639 18.9526L5.22361 19.847ZM5.95258 16.3766L4.55279 19.1762L5.44721 19.6234L6.84701 16.8238L5.95258 16.3766ZM8.79688 9V10H9.79688V9H8.79688ZM14.2969 15.5H15.2969V14.5H14.2969V15.5ZM8.79688 10C8.79688 13.0376 11.2593 15.5 14.2969 15.5V14.5C11.8116 14.5 9.79688 12.4853 9.79688 10H8.79688ZM9.57422 9.41603L9.78739 9.27392L9.23269 8.44187L9.01953 8.58397L9.57422 9.41603ZM10.5579 9.60774L10.6974 10.4444L11.6838 10.28L11.5443 9.44334L10.5579 9.60774ZM10.4815 10.9426L9.51953 11.584L10.0742 12.416L11.0362 11.7747L10.4815 10.9426ZM10.6974 10.4444C10.7297 10.6385 10.6452 10.8335 10.4815 10.9426L11.0362 11.7747C11.5274 11.4473 11.7808 10.8622 11.6838 10.28L10.6974 10.4444ZM9.78739 9.27392C10.0893 9.07266 10.4983 9.24985 10.5579 9.60774L11.5443 9.44334C11.3654 8.36967 10.1384 7.83808 9.23269 8.44187L9.78739 9.27392ZM15.7129 15.2774L15.855 15.0642L15.023 14.5095L14.8809 14.7226L15.7129 15.2774ZM14.8535 12.7525L14.0169 12.6131L13.8525 13.5995L14.6891 13.7389L14.8535 12.7525ZM12.5222 13.2606L11.8809 14.2226L12.7129 14.7774L13.3542 13.8153L12.5222 13.2606ZM14.0169 12.6131C13.4346 12.5161 12.8496 12.7695 12.5222 13.2606L13.3543 13.8153C13.4634 13.6516 13.6584 13.5671 13.8525 13.5995L14.0169 12.6131ZM15.855 15.0642C16.4588 14.1585 15.9272 12.9315 14.8535 12.7525L14.6891 13.7389C15.047 13.7986 15.2242 14.2076 15.023 14.5095L15.855 15.0642Z" fill="var(--neutral-1)"/>
           </svg>
-    button.header__btn.primary-btn Заказать звонок
+    button.header__btn.primary-btn(data-fancybox data-src="#callback") Заказать звонок
+  .header__mobile.header-mobile
+    .header-mobile__top
+      .header-mobile__title Меню
+      button.header-mobile__close 
+        <svg width="24" height="23" viewBox="0 0 24 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M5.5 6.5L17.5 18.5M5.5 18.5L17.5 6.5" stroke="#151515"/>
+        </svg>
+    ul.header-mobile__list
+      li.header-mobile__item.header-mobile-item.accordion
+        .header-mobile-item__top
+          a.header-mobile-item__link(href="#") Проекты
+          button.header-mobile-item__more.accordion__open
+            <svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 10L12 13L15 10" stroke="#151515" stroke-opacity="0.3" stroke-linecap="square"/>
+            </svg>
+        ul.header-mobile-item__list
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Каркасные дома
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Кирпичные дома
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Деревянные дома
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Каменные дома
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Мобильные бани
+      li.header-mobile__item.header-mobile-item.accordion
+        .header-mobile-item__top
+          a.header-mobile-item__link(href="#") Услуги
+          button.header-mobile-item__more.accordion__open
+            <svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 10L12 13L15 10" stroke="#151515" stroke-opacity="0.3" stroke-linecap="square"/>
+            </svg>
+        ul.header-mobile-item__list
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Проектирование
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Инженерные услуги
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Отделка
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Земляные работы
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Под ключ
+      li.header-mobile__item.header-mobile-item.accordion
+        .header-mobile-item__top
+          a.header-mobile-item__link(href="#") Информация
+          button.header-mobile-item__more.accordion__open
+            <svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9 10L12 13L15 10" stroke="#151515" stroke-opacity="0.3" stroke-linecap="square"/>
+            </svg>
+        ul.header-mobile-item__list
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Гарантия
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Этапы работы
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Из чего мы строим
+          li.header-mobile-item__subitem
+            a.header-mobile-item__sublink(href="#") Частозадаваемые вопросы
+      li.header-mobile__item.header-mobile-item
+        .header-mobile-item__top
+          a.header-mobile-item__link(href="#") О нас
+      li.header-mobile__item.header-mobile-item
+        .header-mobile-item__top
+          a.header-mobile-item__link(href="#") Контакты
+    button.primary-btn.header-mobile__btn Заказать звонок
 
 ul.breadcrumbs.container 
   li.breadcrumbs__item
