--- a/src/pug/pages/completed-project-page.pug
+++ b/src/pug/pages/completed-project-page.pug
@@ -91,7 +91,7 @@ block content
             .project-info__row
               span Площадь 2-го этажа
               span 32.50 м²
-            button.project-info__btn.primary-btn Сделать заказ
+            button.project-info__btn.primary-btn(data-fancybox data-src="#checkout") Сделать заказ
 
     .project__content.project-content 
       .project-content__top.container
