--- a/src/pug/pages/guarantee.pug
+++ b/src/pug/pages/guarantee.pug
@@ -20,7 +20,7 @@ block content
               li Целостность конструкции в целом
               li Несоблюдение отдельных <a href="#">требований ГОСТов</a> во время строительства
               li Превышение 5-ти процентного порога усадки конструкции из бруса
-            button.secondary-btn Сообщить о гарантийном случае
+            button.secondary-btn(data-fancybox data-src="#guarantee") Сообщить о гарантийном случае
           .guarantee__block
             h3 Сроки гарантии
             ul.guarantee__list
@@ -56,4 +56,4 @@ block content
           picture.services__picture
             source(type="image/webp" srcset="images/guarantee.jpg")
             img.services__img(src="images/guarantee.jpg" alt="Гарантия на строительство")
-          button.guarantee__btn.secondary-btn Сообщить о гарантийном случае
+          button.guarantee__btn.secondary-btn(data-fancybox data-src="#guarantee") Сообщить о гарантийном случае
