--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -13,7 +13,7 @@ block content
         p.banner__text Было всего без четверти десять, когда мы вернулись в общежитие броссар обожал бридж и пошел
         .banner__btns
           a.banner__btn.secondary-btn(href="#") Выбрать проект
-          button.banner__btn.primary-btn Оформить заявку
+          button.banner__btn.primary-btn(data-fancybox data-src="#request") Оформить заявку
       picture.banner__picture
         source(type="image/webp" srcset="images/house.jpg")
         img.banner__img(src="images/house.jpg" alt="Готовые дома за 2 месяца «под ключ»")
