--- a/src/pug/template.pug
+++ b/src/pug/template.pug
@@ -39,4 +39,8 @@ html(lang="ru")
       include includes/header.pug
       main.content
         block content
+      include includes/popup-callback.pug
+      include includes/popup-checkout.pug
+      include includes/popup-guarantee.pug
+      include includes/popup-request.pug
       include includes/footer.pug
