--- a/src/styles/blocks/otherpages/projects.scss
+++ b/src/styles/blocks/otherpages/projects.scss
@@ -174,6 +174,7 @@
     }
     &-content {
       &__item {
+        display: block;
         & + & {
           margin-top: 20px;
         }
@@ -217,9 +218,24 @@
         }
       }
       &__accept {
+        width: 100%;
         margin-top: 40px;
         padding: 14px 0;
       }
+    }
+  }
+  &__mobfilters {
+    position: fixed;
+    z-index: 10;
+    top: 60px;
+    left: 0;
+    display: none;
+    width: 100%;
+    overflow-y: auto;
+    background-color: var(--neutral-14);
+    height: calc(100vh - 60px);
+    &--active {
+      display: block;
     }
   }
   &__clear {
