--- a/src/pug/pages/completed-projects.pug
+++ b/src/pug/pages/completed-projects.pug
@@ -8,50 +8,57 @@ block content
     .projects__top.container 
       h1.title Построенные проекты
       p.projects__text У всех нас свои предпочтения, вкусы и привычки, но каждому хочется быть стильным и ярким. Изделия созданные нами с нуля достаточно износостойкие и становятся эталоном качества для других.
-      ul.projects__filters.projects-filters
-        li.projects-filters__item.projects-filters__item--sort.select
-          button.projects-filters__btn.select-open По популярности
-          .projects-filters__content.projects-filters-content.select-content 
-            label.projects-filters-content__item
-              input.visually-hidden(type="radio" name="sort" checked)
-              span По популярности
-            label.projects-filters-content__item
-              input.visually-hidden(type="radio" name="sort")
-              span От А до Я
-            label.projects-filters-content__item
-              input.visually-hidden(type="radio" name="sort")
-              span От Я до А
-            label.projects-filters-content__item
-              input.visually-hidden(type="radio" name="sort")
-              span Сначала дешевые
-            label.projects-filters-content__item
-              input.visually-hidden(type="radio" name="sort")
-              span Сначала дорогие
-            button.projects-filters-content__accept.primary-btn Применить
-        li.projects-filters__item.projects-filters__item--filters
-          button.projects-filters__btn Фильтр
-            <svg width="17" height="19" viewBox="0 0 17 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M16 6L7.5 6M7.5 6C7.5 4.89543 6.60457 4 5.5 4C4.39543 4 3.5 4.89543 3.5 6M7.5 6C7.5 7.10457 6.60457 8 5.5 8C4.39543 8 3.5 7.10457 3.5 6M3.5 6L1 6M16 14L13.5 14M13.5 14C13.5 12.8954 12.6046 12 11.5 12C10.3954 12 9.5 12.8954 9.5 14M13.5 14C13.5 15.1046 12.6046 16 11.5 16C10.3954 16 9.5 15.1046 9.5 14M9.5 14H1" stroke="#6F49FF"/>
-            </svg>
-        li.projects-filters__item.select 
-          button.projects-filters__btn.select-open(filters-count="1") Материал
-          .projects-filters__content.select-content 
-        li.projects-filters__item.select 
-          button.projects-filters__btn.select-open Площадь (м2)
-          .projects-filters__content.select-content 
-        li.projects-filters__item.select 
-          button.projects-filters__btn.select-open Размер
-          .projects-filters__content.select-content 
-        li.projects-filters__item.select 
-          button.projects-filters__btn.select-open(filters-count="2") Этажность
-          .projects-filters__content.select-content 
-        li.projects-filters__item.select 
-          button.projects-filters__btn.select-open(filters-count="3") Кол-во комнат
-          .projects-filters__content.select-content 
-        li.projects-filters__item.select 
-          button.projects-filters__btn.select-open Цена (руб)
-          .projects-filters__content.select-content
-      .projects__mobfilters.projects-mobfilters
+      form
+        ul.projects__filters.projects-filters
+          li.projects-filters__item.projects-filters__item--sort.select
+            button.projects-filters__btn.select-open По популярности
+            .projects-filters__content.projects-filters-content.select-content 
+              label.projects-filters-content__item
+                input.visually-hidden(type="radio" name="sort" checked)
+                span По популярности
+              label.projects-filters-content__item
+                input.visually-hidden(type="radio" name="sort")
+                span От А до Я
+              label.projects-filters-content__item
+                input.visually-hidden(type="radio" name="sort")
+                span От Я до А
+              label.projects-filters-content__item
+                input.visually-hidden(type="radio" name="sort")
+                span Сначала дешевые
+              label.projects-filters-content__item
+                input.visually-hidden(type="radio" name="sort")
+                span Сначала дорогие
+              button.projects-filters-content__accept.primary-btn Применить
+          li.projects-filters__item.projects-filters__item--filters
+            button.projects-filters__btn Фильтр
+              <svg width="17" height="19" viewBox="0 0 17 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16 6L7.5 6M7.5 6C7.5 4.89543 6.60457 4 5.5 4C4.39543 4 3.5 4.89543 3.5 6M7.5 6C7.5 7.10457 6.60457 8 5.5 8C4.39543 8 3.5 7.10457 3.5 6M3.5 6L1 6M16 14L13.5 14M13.5 14C13.5 12.8954 12.6046 12 11.5 12C10.3954 12 9.5 12.8954 9.5 14M13.5 14C13.5 15.1046 12.6046 16 11.5 16C10.3954 16 9.5 15.1046 9.5 14M9.5 14H1" stroke="#6F49FF"/>
+              </svg>
+          li.projects-filters__item.select 
+            button.projects-filters__btn.select-open(filters-count="1") Материал
+            .projects-filters__content.select-content 
+          li.projects-filters__item.select 
+            button.projects-filters__btn.select-open Площадь (м2)
+            .projects-filters__content.projects-filters-content.select-content 
+              .projects-filters-content__row
+                input.projects-rangeslider-from(type="text" placeholder="20")
+                input.projects-rangeslider-to(type="text" placeholder="166")
+              .projects-filters-content__rangeslider.projects-rangeslider(data-min="20" data-max="166" data-step="1")
+              button.projects-filters-content__accept.primary-btn Применить
+          li.projects-filters__item.select 
+            button.projects-filters__btn.select-open Размер
+            .projects-filters__content.select-content 
+          li.projects-filters__item.select 
+            button.projects-filters__btn.select-open(filters-count="2") Этажность
+            .projects-filters__content.select-content 
+          li.projects-filters__item.select 
+            button.projects-filters__btn.select-open(filters-count="3") Кол-во комнат
+            .projects-filters__content.select-content 
+          li.projects-filters__item.select 
+            button.projects-filters__btn.select-open Цена (руб)
+            .projects-filters__content.select-content
+      
+      form.projects__mobfilters.projects-mobfilters
         .header-mobile__top
           .header-mobile__title Фильтр
           button.header-mobile__close.projects-mobfilters__close
@@ -90,17 +97,12 @@ block content
                 <svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9 10L12 13L15 10" stroke="#151515" stroke-opacity="0.3" stroke-linecap="square"/>
                 </svg>
-            ul.header-mobile-item__list
-              li.header-mobile-item__subitem
-                a.header-mobile-item__sublink(href="#") Проектирование
-              li.header-mobile-item__subitem
-                a.header-mobile-item__sublink(href="#") Инженерные услуги
-              li.header-mobile-item__subitem
-                a.header-mobile-item__sublink(href="#") Отделка
-              li.header-mobile-item__subitem
-                a.header-mobile-item__sublink(href="#") Земляные работы
-              li.header-mobile-item__subitem
-                a.header-mobile-item__sublink(href="#") Под ключ
+            .header-mobile-item__list
+              .projects-filters-content__row
+                input.projects-rangeslider-from(type="text" placeholder="20")
+                input.projects-rangeslider-to(type="text" placeholder="166")
+              .projects-filters-content__rangeslider.projects-rangeslider(data-min="20" data-max="166" data-step="1")
+              button.projects-filters-content__accept.primary-btn Применить
           li.header-mobile__item.header-mobile-item.accordion
             .header-mobile-item__top
               .header-mobile-item__link Размер
@@ -123,7 +125,7 @@ block content
             .header-mobile-item__top
               .header-mobile-item__link Цена (руб)
         
-      button.projects__clear Очистить фильтр
+      button.projects__clear(projects__clear--active) Очистить фильтр
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M5.5 6.5L17.5 18.5M5.5 18.5L17.5 6.5" stroke="#151515" stroke-opacity="0.4"/>
         </svg>
